# fraktaloj_gui

./: Cargo.toml
src/: error.rs  iteration_image.rs  main.rs
src/render/: cpu.rs  kernel.cl  mod.rs  opencl.rs
